# Django_permition

./: Dockerfile.django  Dockerfile.postgres  django_init.exp  docker-compose.yml  entrypoint.sh  postgres_init.exp  pyproject.toml  run.sh  verify_user_exist.py
.devcontainer/: devcontainer.json
app/django_permition/: asgi.py  settings.py
app/user/: apps.py  models.py
app/user/migrations/: 0001_initial.py
django_permition/: Dockerfile.django  manage.py  postgres_init.sh  pyproject.toml  run.sh
django_permition/.devcontainer/: docker-compose.yml
django_permition/app/django_permition/: admin.py  urls.py  wsgi.py
django_permition/django_permition/: admin.py  asgi.py  settings.py  wsgi.py
