[tool.poetry]
name = "permition"
version = "0.1.0"
description = "Project to test the working of permitions"
authors = ["Veronelli"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
django = "^5.1.2"
psycopg2-binary = "^2.9.9"
django-field-history = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
